fix box alignment

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 /* This is for the top ROW of boxes*/
 .head-container {
     display: flex;
-    justify-content: center;
     /*align-items: flex-start;*/
     /* font-size: 24px; */
      /* color:#F9FAF8; */
@@ -17,7 +16,6 @@
 }*/
 
 .head-container div {
-    justify-content: center;
     color: #E5E7EB;
     font-size: 18px;
     flex:1;
